# ci-test

./: CMakeLists.txt  Dockerfile  Jenkinsfile
.github/workflows/: cmake.yml
src/: CMakeLists.txt
test/: CMakeLists.txt  unit_tests.cpp
